cluster/apps/default/nextcloud/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cloud
subsets:
  - addresses:
      - ip: 192.168.30.4
    ports:
      - name: http
        port: 9000
        protocol: TCP
