cluster/apps/default/nextcloud/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloud
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: http
  type: ClusterIP
