cluster/apps/default/nextcloud/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud
  namespace: default
  labels:
    app.kubernetes.io/name: cloud
  annotations:
    hajimari.io/enable: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
spec:
  ingressClassName: "traefik"
  rules:
    - host: "cloud.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud
                port:
                  number: 9000
  tls:
    - hosts:
        - "cloud.${SECRET_DOMAIN}"
      secretName: cloud-tls
